welcome/istio/devops-tesing/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-deployment
  namespace: devops-testing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: devops-testing
spec:
  selector:
    app: my-nginx
  ports:
    - protocol: TCP
      port: 80     
      targetPort: 80
